# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
# --
# $Id: CHANGES,v 1.323.2.6 2007-01-08 22:39:28 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
2.1.5 (????/??/??)
 - (2007/01/08) fixed case sensitive of customer user login and agent user
   login in Kernel/System/User.pm and Kernel/System/CustomerUser/DB.pm if
   oracle or postgresql is used
 - (2006/12/17) fixed bug #1532 - utf8 charsetproblems in stats
 - (2006/12/15) fixed bug #1446 - No "(Ticket unlock!)" link in
   AgentTicketCompose
 - (2006/12/14) fixed customer ldap auth if system is iso-8859 and ldap server
    is running in utf-8
 - (2006/12/14) fixed not working Kernel/System/DB/db2.pm (syntax error)

2.1.4 (2006/12/13)
 - (2006/12/13) fixed not working free time selection in AgentTicketClose,
    AgentTicketNote, AgentTicketOwner, AgentTicketPending, AgentTicketPriority
    and AgentTicketResponsible
 - (2006/12/11) added config param for shown my queues/custom queues
    in preferences, default are shown all ro queues, see also
    PreferencesGroups###CustomQueue under Frontend::Agent::Preferences
 - (2006/12/11) fixed ldap sync of agents attributes - invalid agents
    are not longer synced to valid if ldap auth was successfully, the
    invalid agent will still be invalid
 - (2006/12/11) fixed bug #1187 - Escalation Notifications sent to invalid agent
 - (2006/12/11) improved link quote of long links in web interface
 - (2006/12/11) fixed bug #962 - Broken attachments with cyrillic filenames
 - (2006/12/08) fixed bug #1521 - Merge Feature
 - (2006/12/08) fixed bug #1523 - update of FreetextValues 9-16 not working
 - (2006/12/08) fixed bug #1524 - ticketFreeText Fields 9-16 not displayed
    at CustomerTicketPrint and CustomerTicketZoom